--- a/src/MasterNet.Infrastructure/MasterNet.Infrastructure.csproj
+++ b/src/MasterNet.Infrastructure/MasterNet.Infrastructure.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.25.1" />
     <PackageReference Include="CsvHelper" Version="31.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0-preview.2.24128.4" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
   </ItemGroup>
 
   <PropertyGroup>
